fixes to mapping

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
-{deps, [{grpcbox, ".*", {git, "https://github.com/tonysun83/grpcbox", {branch, "no-logger"}}},
-    {ctx, ".*", {git, "https://github.com/tsloughter/ctx", {branch, master}}}]}.
+{deps, [
+    {grpcbox, "~> 0.11.0"}
+]}.
 
 {grpc, [{protos, "proto"},
     {type, "client"},
