Fix rebar support
This allows rebar to build ateles while also allowing the use of rebar3
to generate the grpc modules:

    `rebar3 grpc gen`

--- a/rebar.config
+++ b/rebar.config
@@ -11,14 +11,17 @@
 % the License.
 
 {erl_opts, [debug_info]}.
-{deps, [
-    {grpcbox, "~> 0.11.0"}
-]}.
 
-{grpc, [{protos, "proto"},
-    {type, "client"},
-    {gpb_opts, [{module_name_suffix, "_pb"}]}]}.
+{deps, [
+    {grpcbox, ".*", {git, "https://github.com/davisp/grpcbox", {branch, "rebar2-support"}}}
+]}.
 
 {plugins, [grpcbox_plugin]}.
 
-{config, "./config/sys.config"}.
+{grpc, [
+    {protos, "proto"},
+    {type, "client"},
+    {gpb_opts, [
+        {module_name_suffix, "_pb"}
+    ]}
+]}.
