--- a/test/eunit.config
+++ b/test/eunit.config
@@ -10,22 +10,7 @@
 % License for the specific language governing permissions and limitations under
 % the License.
 
--module(ateles_app).
--behaviour(application).
-
-
--export([
-    start/2,
-    stop/1
-]).
-
-
-start(_, _) ->
-    {ok, _} = application:ensure_all_started(grpcbox),
-    Endpoints = [{http, "127.0.0.1", 50051, []}],
-    {ok, _} = grpcbox_channel_sup:start_child(default_channel, Endpoints, #{}),
-    ateles_sup:start_link().
-
-
-stop(_) ->
-    ok.
+[
+    {kernel, [{error_logger, silent}]},
+    {sasl, [{sasl_error_logger, false}]}
+].
