Initial Erlang context management
So far this passes a very basic map_docs call which includes rewriting
functions and so on.

--- a/rebar.config
+++ b/rebar.config
@@ -13,6 +13,8 @@
 {erl_opts, [debug_info]}.
 
 {deps, [
+    {config, ".*", {git, "https://github.com/apache/couchdb-config", {branch, "master"}}},
+    {jiffy, ".*", {git, "https://github.com/davisp/jiffy", {branch, "master"}}},
     {grpcbox, ".*", {git, "https://github.com/davisp/grpcbox", {branch, "rebar2-support"}}}
 ]}.
 
