--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
 {deps, [
     {config, ".*", {git, "https://github.com/apache/couchdb-config", {branch, "master"}}},
     {jiffy, ".*", {git, "https://github.com/davisp/jiffy", {branch, "master"}}},
-    {grpcbox, ".*", {git, "https://github.com/davisp/grpcbox", {branch, "rebar2-support"}}}
+    {grpcbox, ".*", {git, "https://github.com/cloudant-labs/grpcbox", {branch, "chatterbox-fix"}}}
 ]}.
 
 {plugins, [grpcbox_plugin]}.
