Replace gRPC with an HTTP/1.1 client
This is a fairly massive rewrite to switch from a gRPC based behavior to
using an HTTP/1.1 client. Replacing gRPC with a boost::beast HTTP/1.1
server means that our library requirements have also changed. The README
has been updated to reflect this.

--- a/rebar.config
+++ b/rebar.config
@@ -15,21 +15,22 @@
 {deps, [
     {config, ".*", {git, "https://github.com/apache/couchdb-config", {branch, "master"}}},
     {jiffy, ".*", {git, "https://github.com/davisp/jiffy", {branch, "master"}}},
-    {grpcbox, ".*", {git, "https://github.com/davisp/grpcbox", {branch, "rebar2-support"}}}
+    {gpb, ".*", {git, "https://github.com/tomas-abrahamsson/gpb", {branch, "master"}}}
 ]}.
 
-{plugins, [grpcbox_plugin]}.
+{proto_opts, [
+    {compiler, gpb},
+    {src_dirs, ["proto"]}
+]}.
 
-{grpc, [
-    {protos, "proto"},
-    {type, "client"},
-    {gpb_opts, [
-        {module_name_suffix, "_pb"}
-    ]}
+{gpb_opts, [
+    maps,
+    strings_as_binaries,
+    {module_name_suffix, "_pb"}
 ]}.
 
 {eunit_opts, [
     verbose
 ]}.
 
-{pre_hooks, [{"", compile, "make generate server"}]}.
+{pre_hooks, [{"", compile, "make server"}]}.
