Replace gRPC with an HTTP/1.1 client
This is a fairly massive rewrite to switch from a gRPC based behavior to
using an HTTP/1.1 client. Replacing gRPC with a boost::beast HTTP/1.1
server means that our library requirements have also changed. The README
has been updated to reflect this.

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 _build
 deps
 ebin
+*.pem
 
 coverage/
+out/
 
 erl_crash.dump
 rebar3.crashdump
@@ -14,7 +16,4 @@ default.profraw
 
 priv/ateles
 
-src/ateles_client.erl
 src/ateles_pb.erl
-src/grpc_health_v_1_health_client.erl
-src/health_pb.erl
