Remove health.proto and gRPC dependencies
This switches to using rebar2's builting protobuf support. One hack/wart
is that it requires that ateles depends on gpb so that its compiled
first. This is wrong because it means that ateles now has a runtime
dependency on gpb.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,11 +23,8 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(MOZJS REQUIRED mozjs-60)
 pkg_check_modules(OPENSSL REQUIRED openssl)
 pkg_check_modules(PROTOBUF REQUIRED protobuf)
-pkg_check_modules(GRPC REQUIRED grpc++)
-pkg_check_modules(GPR REQUIRED gpr)
 
 find_program(PROTOC protoc)
-find_program(GRPC_PLUGIN grpc_cpp_plugin)
 find_program(PYTHON python)
 
 option(ENABLE_COVERAGE "Build for code coverage reports" OFF)
@@ -41,10 +38,6 @@ endif()
 set(PROTO_DIR ${CMAKE_CURRENT_SOURCE_DIR}/proto)
 set(ATELES_PB_SRC ${PROTO_DIR}/ateles.proto)
 set(ATELES_PB ${CMAKE_CURRENT_BINARY_DIR}/ateles.pb.cc)
-set(ATELES_GRPC ${CMAKE_CURRENT_BINARY_DIR}/ateles.grpc.pb.cc)
-set(HEALTH_PB_SRC ${PROTO_DIR}/health.proto)
-set(HEALTH_PB ${CMAKE_CURRENT_BINARY_DIR}/health.pb.cc)
-set(HEALTH_GRPC ${CMAKE_CURRENT_BINARY_DIR}/health.grpc.pb.cc)
 
 add_custom_command (
     OUTPUT ${ATELES_PB}
@@ -55,42 +48,10 @@ add_custom_command (
     DEPENDS ${ATELES_PB_SRC}
 )
 
-add_custom_command(
-    OUTPUT ${ATELES_GRPC}
-    COMMAND ${PROTOC}
-        -I ${PROTO_DIR}
-        --grpc_out=${CMAKE_CURRENT_BINARY_DIR}
-        --plugin=protoc-gen-grpc=${GRPC_PLUGIN}
-        ateles.proto
-    DEPENDS ${ATELES_PB_SRC}
-)
-
-add_custom_command (
-    OUTPUT ${HEALTH_PB}
-    COMMAND ${PROTOC}
-        -I ${PROTO_DIR}
-        --cpp_out=${CMAKE_CURRENT_BINARY_DIR}
-        health.proto
-    DEPENDS ${HEALTH_PB_SRC}
-)
-
-add_custom_command(
-    OUTPUT ${HEALTH_GRPC}
-    COMMAND ${PROTOC}
-        -I ${PROTO_DIR}
-        --grpc_out=${CMAKE_CURRENT_BINARY_DIR}
-        --plugin=protoc-gen-grpc=${GRPC_PLUGIN}
-        health.proto
-    DEPENDS ${HEALTH_PB_SRC}
-)
-
 file(GLOB SRC "c_src/*.cc")
 add_executable(
     ateles
     ${ATELES_PB}
-    ${ATELES_GRPC}
-    ${HEALTH_PB}
-    ${HEALTH_GRPC}
     ${SRC})
 
 set(CFLAGS
@@ -102,33 +63,25 @@ set(CFLAGS
     ${MOZJS_CFLAGS}
     ${OPENSSL_CFLAGS}
     ${PROTOBUF_CFLAGS}
-    ${GRPC_CFLAGS}
-    ${GPR_CFLAGS}
     ${COVERAGE_OPTS})
 
-set_source_files_properties(
-    ateles.grpc.pb.cc
-    health.grpc.pb.cc
-    c_src/server.cc
-    PROPERTIES
-       COMPILE_FLAGS -Wno-deprecated-declarations
-)
+# set_source_files_properties(
+#     c_src/server.cc
+#     PROPERTIES
+#        COMPILE_FLAGS -Wno-deprecated-declarations
+# )
 
 set(INCLUDES
     ${CMAKE_CURRENT_BINARY_DIR}
     ${Boost_INCLUDE_DIRS}
     ${MOZJS_INCLUDE_DIRS}
     ${OPENSSL_INCLUDE_DIRS}
-    ${PROTOBUF_INCLUDE_DIRS}
-    ${GRPC_INCLUDE_DIRS}
-    ${GPR_INCLUDE_DIRS})
+    ${PROTOBUF_INCLUDE_DIRS})
 
 set(LDFLAGS
     ${MOZJS_LDFLAGS}
     ${OPENSSL_LDFLAGS}
     ${PROTOBUF_LDFLAGS}
-    ${GRPC_LDFLAGS}
-    ${GPR_LDFLAGS}
     ${COVERAGE_OPTS})
 
 target_compile_options(ateles PUBLIC ${CFLAGS})
