Support doc filtering in ateles
Add the ability to filter docs for the changes feed using a javascript
filter or map function.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,8 +86,8 @@ set(ESPRIMA_SRC ${CMAKE_CURRENT_SOURCE_DIR}/priv/esprima.js)
 set(ESPRIMA_HDR ${CMAKE_CURRENT_BINARY_DIR}/esprima.h)
 set(REWRITE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/priv/rewrite_fun.js)
 set(REWRITE_HDR ${CMAKE_CURRENT_BINARY_DIR}/rewrite_fun.h)
-set(VALIDATE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/priv/validate.js)
-set(VALIDATE_HDR ${CMAKE_CURRENT_BINARY_DIR}/validate.h)
+set(DDOC_SRC ${CMAKE_CURRENT_SOURCE_DIR}/priv/ddoc.js)
+set(DDOC_HDR ${CMAKE_CURRENT_BINARY_DIR}/ddoc.h)
 
 
 add_custom_command(
@@ -109,9 +109,9 @@ add_custom_command(
 )
 
 add_custom_command(
-        OUTPUT ${VALIDATE_HDR}
-        COMMAND ${PYTHON} ${MKHEADER} ${VALIDATE_SRC} ${VALIDATE_HDR} validate
-        DEPENDS ${VALIDATE_SRC}
+        OUTPUT ${DDOC_HDR}
+        COMMAND ${PYTHON} ${MKHEADER} ${DDOC_SRC} ${DDOC_HDR} validate
+        DEPENDS ${DDOC_SRC}
 )
 
 
@@ -123,7 +123,7 @@ add_executable(
     ${ESCODEGEN_HDR}
     ${ESPRIMA_HDR}
     ${REWRITE_HDR}
-    ${VALIDATE_HDR})
+    ${DDOC_HDR})
 
 set(CFLAGS
     -g
